--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,8 @@ internet utiles de La Réunion.{% endblock %} {% block header_content %}
 </p>
 {% endblock %} {% block content %}
 
-<h2 class="home-section-title">Explorer les catégories</h2>
-<p class="home-section-subtitle">
-  Glisse latéralement pour parcourir les thèmes les plus consultés.
-</p>
+<h2 class="home-section-title">Sites internet de La Réunion</h2>
+<p class="home-section-subtitle">Les sites internet classés par catégories.</p>
 <section class="home-carousel" data-carousel>
   <div class="home-carousel__top">
     <p class="home-carousel__hint">Glisser pour explorer</p>
@@ -123,7 +121,8 @@ internet utiles de La Réunion.{% endblock %} {% block header_content %}
 
 <h2 class="home-section-title">Derniers sites ajoutés</h2>
 <p class="home-section-subtitle">
-  Les dernières découvertes de la communauté, publiées et vérifiées par mes soins.
+  Les dernières découvertes de la communauté, publiées et vérifiées par mes
+  soins.
 </p>
 <section class="home-row">
   <div class="home-carousel home-carousel--secondary" data-carousel>
