refonte structure dossier, modulable

--- a/app/templates/_proposer_form.html
+++ b/app/templates/_proposer_form.html
@@ -10,7 +10,7 @@
 
   <form
     method="post"
-    action="{{ url_for('formulaire') }}"
+    action="{{ url_for('public.formulaire') }}"
     class="proposer-card__form"
     autocomplete="off"
   >
@@ -83,7 +83,7 @@
       <p class="form-note">
         Je valide chaque contribution pour garantir la qualité des liens
         partagés. Besoin du mode détaillé ?
-        <a href="{{ url_for('formulaire') }}">Ouvre le formulaire complet</a>.
+        <a href="{{ url_for('public.formulaire') }}">Ouvre le formulaire complet</a>.
       </p>
     </div>
   </form>
