--- a/app/templates/admin/edit_site.html
+++ b/app/templates/admin/edit_site.html
@@ -12,7 +12,7 @@
       <p>{{ subtitle|safe }}</p>
       {% endif %}
     </div>
-    <a class="btn btn-secondary" href="{{ url_for('admin_dashboard') }}">
+    <a class="btn btn-secondary" href="{{ url_for('admin.dashboard') }}">
       ← Retour au tableau de bord
     </a>
   </header>
