--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -46,8 +46,8 @@
     passées en revue dans l'espace admin avant publication (anti-spam, contenus propres, sources fiables).
   </p>
   <p>
-    Tu peux contribuer à l'enrichissement du portail en utilisant le formulaire <a href="{{ url_for('formulaire') }}">Proposer un site</a>
-    ou en me contactant via la page <a href="{{ url_for('contact') }}">Contact</a>.
+    Tu peux contribuer à l'enrichissement du portail en utilisant le formulaire <a href="{{ url_for('public.formulaire') }}">Proposer un site</a>
+    ou en me contactant via la page <a href="{{ url_for('public.contact') }}">Contact</a>.
   </p>
 </section>
 
