--- a/app/templates/formulaire.html
+++ b/app/templates/formulaire.html
@@ -28,7 +28,7 @@ Votre suggestion sera vérifiée avant publication.{% endblock %} {% block conte
 
   <form
     method="post"
-    action="{{ url_for('formulaire') }}"
+    action="{{ url_for('public.formulaire') }}"
     class="proposer-card proposer-card--full"
     autocomplete="off"
     novalidate
@@ -111,7 +111,7 @@ Votre suggestion sera vérifiée avant publication.{% endblock %} {% block conte
   </form>
 
   <div class="form-page__back">
-    <a href="{{ url_for('accueil') }}" class="link-back"
+    <a href="{{ url_for('public.accueil') }}" class="link-back"
       >← Retour à l'accueil</a
     >
   </div>
